; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_file.c_spufs_signal2_type_set.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_file.c_spufs_signal2_type_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spu_context = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.spu_context*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @spufs_signal2_type_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spufs_signal2_type_set(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.spu_context*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.spu_context*
  store %struct.spu_context* %9, %struct.spu_context** %6, align 8
  %10 = load %struct.spu_context*, %struct.spu_context** %6, align 8
  %11 = call i32 @spu_acquire(%struct.spu_context* %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %7, align 4
  store i32 %15, i32* %3, align 4
  br label %27

16:                                               ; preds = %2
  %17 = load %struct.spu_context*, %struct.spu_context** %6, align 8
  %18 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32 (%struct.spu_context*, i32)*, i32 (%struct.spu_context*, i32)** %20, align 8
  %22 = load %struct.spu_context*, %struct.spu_context** %6, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 %21(%struct.spu_context* %22, i32 %23)
  %25 = load %struct.spu_context*, %struct.spu_context** %6, align 8
  %26 = call i32 @spu_release(%struct.spu_context* %25)
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %16, %14
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @spu_acquire(%struct.spu_context*) #1

declare dso_local i32 @spu_release(%struct.spu_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
